[package]
name = "ds-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-api = "0.12.2"
serenity = { version="0.11" }
futures = "0.3"
tokio = "1.24.2"
derive_more = "0.99.17"
phf = { version = "0.11.1", features = ["macros"] }
dotenv = "0.15.0"
